manifests/itoa-orchestration-api-namespace.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: team-automation
  labels:
    name: team-automation
...
