manifests/itoa-orchestration-api-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: team-automation
  name: team-automation
spec:
  ports:
  - name: team-automation-api
    port: 80
    targetPort: 8000
  selector:
    app: team-automation
